--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <!-- start header jumbotron -->
-<header class="jumbotron back-image" style="background-image:url(images/Banner1.jpeg);">
+<header class="jumbotron back-image" style="background-image:url(images/alok.jpeg);">
     <div class="myclass mainHeading">
         <h1 class="text-uppercase text-danger font-weight-bold">Welcome to OSMS</h1>
         <p class="font-italic">Customer's Happiness is our Aim</p>
