--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 <!-- start navigation -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-danger pl-5 fixed-top">
     <a href="index.php" class="navbar-brand">OSMS</a>
-    <span class="navbar-text">Customer's Happiness is our Aim</span>
+    <span class="navbar-text">Kyun chauk gaye na</span>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="myMenu">
         <ul class="navbar-nav pl-5 custom-nav">
-            <li class="nav-item"><a href="index.php" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#registration" class="nav-link">Registration</a></li>
-            <li class="nav-item"><a href="Requester/requesterLogin.php" class="nav-link">Login</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="index.php" class="nav-link">Ashwin</a></li>
+            <li class="nav-item"><a href="#services" class="nav-link">Harsh</a></li>
+            <li class="nav-item"><a href="#registration" class="nav-link">Kunal</a></li>
+            <li class="nav-item"><a href="Requester/requesterLogin.php" class="nav-link">Prince</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Raaj Kr</a></li>
         </ul>
     </div>
 </nav> <!-- End Navigation -->
