--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="col-lg-3 col-sm-6">   <!-- start 1st column --->
                 <div class="card shadow-lg mb-2">
                     <div class="card-body text-center">
-                        <img src="images/avtar1.jpeg" alt="avt1" style="border-radius:100px;">
+                        <img src="images/harsh.jpeg" alt="avt1" style="border-radius:100px;">
                         <h4 class="card-title">Harsh Raj</h4>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur 
@@ -125,8 +125,8 @@
             <div class="col-lg-3 col-sm-6">   <!-- start 2nd column --->
                 <div class="card shadow-lg mb-2">
                     <div class="card-body text-center">
-                        <img src="images/avtar2.jpeg" alt="avt2" style="border-radius:100px;">
-                        <h4 class="card-title">Ashwin Chauhan</h4>
+                        <img src="images/prince.jpeg" alt="avt2" style="border-radius:100px;">
+                        <h4 class="card-title">Prince Kumar</h4>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Eligendi aliquid voluptas, 
@@ -139,7 +139,7 @@
             <div class="col-lg-3 col-sm-6">   <!-- start 3rd column --->
                 <div class="card shadow-lg mb-2">
                     <div class="card-body text-center">
-                        <img src="images/avtar3.jpeg" alt="avt3" style="border-radius:100px;">
+                        <img src="images/kunal.jpeg" alt="avt3" style="border-radius:100px;">
                         <h4 class="card-title">Kunal Aryan</h4>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur 
@@ -153,8 +153,8 @@
             <div class="col-lg-3 col-sm-6">   <!-- start 4th column --->
                 <div class="card shadow-lg mb-2">
                     <div class="card-body text-center">
-                        <img src="images/avtar4.jpeg" alt="avt4" style="border-radius:100px;">
-                        <h4 class="card-title">Prince Kumar</h4>
+                        <img src="images/Raaj.jpeg" alt="avt4" style="border-radius:100px;">
+                        <h4 class="card-title">Raaj Kumar</h4>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Eligendi aliquid voluptas, 
